--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-masonry-layout",
-  "version": "1.0.0",
+  "name": "use-masonry-layout",
+  "version": "1.1.0",
   "description": "Simple Masonry Layout using React Hooks",
   "main": "dist/masonry.js",
   "scripts": {
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/namKolo/react-masonry-layout#readme",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.6.3",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.7.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.1",
     "eslint": "^6.1.0",
@@ -30,11 +33,11 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
+	"peerDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+	},
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.7.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "lodash": "^4.17.15"
   }
 }
